fixed spacing for table

--- a/static/searchterm/searchterm.css
+++ b/static/searchterm/searchterm.css
@@ -69,7 +69,6 @@ ol li {
     overflow-x: auto;
     overflow-y: auto;
     border-radius: 2px;
-    margin-right: 2vh !important;
     margin: auto;
     border: 0.5px solid rgb(207, 196, 196);
 }
